--- a/prometheus/service.yaml
+++ b/prometheus/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: prometheus-server
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-    - port: 9090
+    - port: 80
       targetPort: 9090
