--- a/prometheus/service-lb.yaml
+++ b/prometheus/service-lb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-server
+  name: prometheus-gateway
 spec:
   type: LoadBalancer
   ports:
